@startuml

class MainFrame {
- listctrl
- addDialog
- deleteDialog
- searchDialog
- modigyDialog
+ __init__()
+ init_ui()
+ init_menu()
+ init_view()
+ show(showflag)
+ OnAddButton(event)
+ OnDeleteButton(event)
+ OnSearchButton(event)
+ OnModifyButton(event)
}

class AddDialog {
<<<<<<< HEAD
- book
=======
- name
- phone
- address
>>>>>>> origin/master
- nameTextCtrl
- phoneTextCtrl
- addressTextCtrl
+ __init__()
+ init_view()
+ OnAddButton(event)
+ OnCancelButton(event)
}

class DeleteDialog {
<<<<<<< HEAD
- book
- deleteName
=======
- name
>>>>>>> origin/master
- nameTextCtrl
- phoneTextCtrl
- addressTextCtrl
+ __init__()
+ init_view()
+ OnSearchButton(event)
+ OnDeleteButton(event)
+ OnCancelButton(event)
}

class SearchDialog {
<<<<<<< HEAD
- book
=======
- name
>>>>>>> origin/master
- nameTextCtrl
- phoneTextCtrl
- addressTextCtrl
+ __init__()
+ init_view()
+ OnSearchButton(event)
<<<<<<< HEAD
+ OnExitButton(event)
}

class ModifyDialog {
- book
=======
+ OnOkButton(event)
}

class ModifyDialog {
- name
- phone
- address
>>>>>>> origin/master
- nameTextCtrl
- phoneTextCtrl
- addressTextCtrl
+ __init__()
+ init_view()
+ OnSearchButton(event)
+ OnModifyButton(event)
+ OnCancelButton(event)
}

MainFrame *-- AddDialog
MainFrame *-- SearchDialog
MainFrame *-- DeleteDialog
MainFrame *-- ModifyDialog

@enduml